--- a/springboot-webmvc/src/main/resources/templates/index.html
+++ b/springboot-webmvc/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <div>
     <h2>Hello World!!</h2>
-    <h1 th:text="#{app.title}">App Title</h1>
+    <h1 th:text="#{title}">App Title</h1>
     <h1 th:text="${message}"></h1>
 </div>
 </body>
